[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmeter"
version = "0.1.0"
description = "Agent execution tracing and economic event emission."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
]
langchain = [
    "langchain-core>=0.1",
]
litellm = [
    "litellm>=1.0",
]
openai-agents = [
    "openai-agents>=0.1",
]

[project.scripts]
agentmeter = "agentmeter.cli:main"

[tool.setuptools.packages.find]
include = ["agentmeter*"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*@abstractmethod",
    "^\\s*if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = [
    "agentmeter/cli.py",
    "agentmeter/integrations/*",
]
